--- a/mobile/app/build.gradle
+++ b/mobile/app/build.gradle
@@ -44,6 +44,9 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.3"
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'com.google.android.material:material:1.11.0'
     implementation("androidx.core:core-ktx:1.12.0")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
