--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/Theme.Codegenius"
         tools:targetApi="33" >
         <activity
-            android:name=".feature.aluno.login.view.LoginActivity"
+            android:name=".feature.aluno.login.views.LoginActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
