--- a/mobile/app/build.gradle
+++ b/mobile/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     debugImplementation("androidx.compose.ui:ui-test-manifest")
 
     implementation "io.coil-kt:coil-compose:2.2.0"
+    implementation "androidx.compose.material:material-icons-extended:1.6.6"
 }
