--- a/mobile/app/build.gradle
+++ b/mobile/app/build.gradle
@@ -15,7 +15,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "BASE_URL", "\"http://26.183.166.115:8080/\"")
     }
+
 
     buildTypes {
         release {
@@ -23,6 +25,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -32,6 +35,8 @@ android {
     }
     buildFeatures {
         compose = true
+        buildConfig = true
+
     }
     composeOptions {
         kotlinCompilerExtensionVersion = "1.5.1"
@@ -41,7 +46,11 @@ android {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
     }
+
+
 }
+
+
 
 dependencies {
     def nav_version = "2.5.3"
@@ -66,4 +75,10 @@ dependencies {
 
     implementation "io.coil-kt:coil-compose:2.2.0"
     implementation "androidx.compose.material:material-icons-extended:1.6.6"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+    implementation("io.insert-koin:koin-android:3.5.0")
+    implementation("androidx.compose.runtime:runtime-livedata:1.6.5")
+
 }
