--- a/mobile/app/build.gradle
+++ b/mobile/app/build.gradle
@@ -80,5 +80,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
     implementation("io.insert-koin:koin-android:3.5.0")
     implementation("androidx.compose.runtime:runtime-livedata:1.6.5")
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
 }
